--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-allauth==0.42.0
 django-crispy-forms==1.9.1
 django-summernote==0.8.11.6
 django-tinymce==3.0.2
+gunicorn==20.0.4
 idna==2.9
 oauthlib==3.1.0
 Pillow==7.1.2
